little fix and javac